Fix animation causing horizontal scroll

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -107,8 +107,7 @@
   }
     
     .page{
-        padding-left: 5% ;
-        padding-right: 5%;
+        padding: 10%;
     }
     
     .infobar{
